data/derived/fa15/progs/unify/prog3919.ml.out
Characters 100-110:
  h = getHeads t
      ^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type char
